--- a/lab4/RNN_Lab.ipynb
+++ b/lab4/RNN_Lab.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "id": "IDNS-GhLCusz",
     "tags": []
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "id": "EaFUyzF-Cus2",
     "tags": []
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "id": "Eay_PCwACus4",
     "tags": []
@@ -184,7 +184,7 @@
        "['i', 'returned', 'to', 'japan', '.']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {
     "id": "R29hmyaRCus5",
     "tags": []
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {
     "id": "onyml-oDCus7",
     "tags": []
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {
     "id": "tZBil9ezCus8",
     "tags": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -391,6 +391,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From c:\\Users\\jakob\\Documents\\venvs\\732A82\\Lib\\site-packages\\tf_keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
+      "\n",
       "tf.Tensor([   5 1005   11  530  188    4], shape=(6,), dtype=int64)\n"
      ]
     }
@@ -415,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +426,7 @@
        "1005"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {
     "id": "TkFTb0LkCus9",
     "tags": []
@@ -497,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {
     "id": "t1tyWbfbCus-",
     "tags": []
@@ -518,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "metadata": {
     "id": "DC2j_oZyCus_",
     "tags": []
@@ -533,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {
     "id": "dYhTBym7Cus_",
     "tags": []
@@ -610,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "id": "klNT7vTPCutB",
     "tags": []
@@ -621,9 +623,9 @@
     "    def __init__(self, num_words, embedding_dim=128, hidden_dim=256):\n",
     "        super().__init__()\n",
     "        # TODO: Add your code here that defines the required layers/weights\n",
-    "        self.embedding = ...\n",
-    "        self.rnn = ...\n",
-    "        self.linear = ...\n",
+    "        self.embedding = layers.Embedding(num_words, embedding_dim,mask_zero=True)\n",
+    "        self.rnn = layers.Bidirectional(layers.GRU(hidden_dim, return_sequences=True, return_state=True))\n",
+    "        self.linear = layers.Dense(hidden_dim, activation=\"relu\")\n",
     "\n",
     "    def call(self, inputs):\n",
     "        # TODO\n",
@@ -631,7 +633,19 @@
     "        # 2. Apply a bi-directional GRU over the source sequences\n",
     "        # 3. Apply a linear transformation to the GRU's output\n",
     "        # 4. Concatenate forward + backward hidden states and apply a linear transformation on them too\n",
-    "        raise NotImplementedError"
+    "        \n",
+    "        # 1.\n",
+    "        embedded_input = self.embedding(inputs)\n",
+    "        # 2. \n",
+    "        bidirectional_output, forward_hidden, backward_hidden = self.rnn(embedded_input)\n",
+    "        # 3.\n",
+    "        linear_transformed = self.linear(bidirectional_output)\n",
+    "        # 4. \n",
+    "        concatenated_states = tf.concat([forward_hidden, backward_hidden], axis=1)\n",
+    "\n",
+    "        linear_transformed_states = self.linear(concatenated_states)\n",
+    "\n",
+    "        return (linear_transformed, linear_transformed_states)"
    ]
   },
   {
@@ -671,7 +685,17 @@
      "solution"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 6)\n",
+      "(1, 6, 256)\n",
+      "(1, 256)\n"
+     ]
+    }
+   ],
    "source": [
     "def test21():\n",
     "    src, tgt = example(train_dataset, 42)\n",
@@ -705,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "id": "VK4LsCUfCutD",
     "tags": []
@@ -766,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
     "id": "RyclW2osCutE",
     "tags": []
@@ -778,14 +802,22 @@
     "        super().__init__()\n",
     "        self.supports_masking = True\n",
     "        # TODO: Add your code here that defines the required layers/weights\n",
-    "        self.w = ...\n",
-    "        self.u = ...\n",
-    "        self.v = ...\n",
+    "        #self.w = tf.zeros_initializer(shape=(hidden_dim, hidden_dim))\n",
+    "        self.w = tf.zeros(shape=(hidden_dim, hidden_dim))\n",
+    "        self.u = tf.zeros(shape=(hidden_dim, hidden_dim))\n",
+    "        self.v = tf.zeros(shape=(hidden_dim,1))\n",
+    "        #self.u = tf.zeros_initializer(shape=(hidden_dim, 2 * hidden_dim))\n",
+    "        #self.v = tf.zeros_initializer(shape=(hidden_dim, 1))\n",
     "\n",
     "    def call(self, decoder_hidden, encoder_output, mask=None):\n",
     "        # TODO: Replace the next line with your own code that computes the attention scores\n",
-    "        scores = tf.zeros_like(encoder_output[:, :, -1])\n",
-    "\n",
+    "        #scores = tf.transpose(self.v) @ tf.nn.tanh(decoder_hidden @ self.w  + encoder_output @ self.u)\n",
+    "      \n",
+    "        #decoder_hidden = tf.expand_dims(decoder_hidden, axis=1)  # (batch_size, 1, hidden_dim)\n",
+    "        scores = tf.matmul(tf.nn.tanh(\n",
+    "        tf.matmul(decoder_hidden, self.w) + tf.matmul(encoder_output, self.u)\n",
+    "            ), self.v)  # (batch_size, seq_len, 1)\n",
+    "        scores = tf.squeeze(scores, axis=-1)\n",
     "        # ... The rest of the code is as in UniformAttention — NO NEED TO MODIFY BELOW THIS LINE!\n",
     "\n",
     "        # Mask out the attention scores for the padding tokens. We set\n",
@@ -839,14 +871,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
     "id": "ZUqLpHXiCutG",
     "tags": [
      "solution"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 6)\n",
+      "(1, 256)\n"
+     ]
+    }
+   ],
    "source": [
     "def test22():\n",
     "    src, tgt = example(train_dataset, 42)\n",
