--- a/lab4/RNN_Lab.ipynb
+++ b/lab4/RNN_Lab.ipynb
@@ -74,9 +74,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✗ Tensorflow has NOT detected a GPU.\n",
+      "\n",
+      "For GPU support, visit: <https://www.tensorflow.org/install/pip>\n"
+     ]
+    }
+   ],
    "source": [
     "os.environ[\"CUDA_DEVICE_ORDER\"]=\"PCI_BUS_ID\"\n",
     "# The GPU id to use, usually either \"0\" or \"1\"\n",
@@ -294,13 +304,6 @@
     "src_vocab = make_vocab(sentences('en-sv-train.txt', SWEDISH), 5000)\n",
     "tgt_vocab = make_vocab(sentences('en-sv-train.txt', ENGLISH), 5000)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -612,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {
     "id": "klNT7vTPCutB",
     "tags": []
@@ -678,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "id": "LU4SIh0NCutC",
     "tags": [
@@ -690,7 +693,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 6)\n",
       "(1, 6, 256)\n",
       "(1, 256)\n"
      ]
@@ -729,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {
     "id": "VK4LsCUfCutD",
     "tags": []
@@ -790,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 45,
    "metadata": {
     "id": "RyclW2osCutE",
     "tags": []
@@ -813,7 +815,7 @@
     "        # TODO: Replace the next line with your own code that computes the attention scores\n",
     "        #scores = tf.transpose(self.v) @ tf.nn.tanh(decoder_hidden @ self.w  + encoder_output @ self.u)\n",
     "      \n",
-    "        #decoder_hidden = tf.expand_dims(decoder_hidden, axis=1)  # (batch_size, 1, hidden_dim)\n",
+    "        decoder_hidden = tf.expand_dims(decoder_hidden, axis=1)  # (batch_size, 1, hidden_dim)\n",
     "        scores = tf.matmul(tf.nn.tanh(\n",
     "        tf.matmul(decoder_hidden, self.w) + tf.matmul(encoder_output, self.u)\n",
     "            ), self.v)  # (batch_size, seq_len, 1)\n",
@@ -871,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 47,
    "metadata": {
     "id": "ZUqLpHXiCutG",
     "tags": [
@@ -938,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "id": "xBDjsJ-1CutH",
     "tags": []
@@ -953,9 +955,9 @@
     "        self.bos_index = trg_lookup([\"<bos>\"]).numpy()\n",
     "        self.max_len = max_len\n",
     "        # TODO: Add your code here that defines the required layers/weights\n",
-    "        self.attention = ...\n",
-    "        self.rnn_cell = ...\n",
-    "        self.linear = ...\n",
+    "        self.attention = attention\n",
+    "        self.rnn_cell = layers.GRUCell(hidden_dim)\n",
+    "        self.linear = layers.Dense(num_words, activation=\"softmax\")\n",
     "\n",
     "    def call(self, encoder_output, initial_state, targets=None, training=False, mask=None):\n",
     "        # YOU WON'T NEED TO MODIFY ANYTHING IN THIS FUNCTION.\n",
@@ -1023,13 +1025,13 @@
     "    def step(self, encoder_output, hidden_state, prev_embed, mask=None):\n",
     "        # TODO: Replace the next line with your own code; this should follow the illustration above.\n",
     "        # 1. Get the attention weights and context vector\n",
-    "        alpha, context = ...\n",
+    "        alpha, context = self.attention(hidden_state, encoder_output, mask=encoder_output._keras_mask)\n",
     "        # 2. Concatenate the inputs for the GRU\n",
-    "        rnn_input = ...\n",
+    "        rnn_input = tf.concat([prev_embed, context], axis=-1)\n",
     "        # 3. Take one step with the GRU cell\n",
-    "        rnn_output, hidden_state = ...\n",
+    "        rnn_output, hidden_state = self.rnn_cell(rnn_input, hidden_state)\n",
     "        # 4. Concatenate the respective tensors to produce the final output\n",
-    "        output = ...\n",
+    "        output = self.linear(rnn_output)\n",
     "        \n",
     "        return output, hidden_state, alpha"
    ]
@@ -1068,14 +1070,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "id": "65lLG-bBCutI",
     "tags": [
      "solution"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 16, 5000)\n",
+      "(4, 16, 5)\n",
+      "(4, 8, 5000)\n"
+     ]
+    }
+   ],
    "source": [
     "def test23():\n",
     "    src, tgt = list(train_dataset.take(4).padded_batch(4))[0]\n",
@@ -1112,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "id": "lUjIGniZCutJ",
     "tags": []
@@ -1186,14 +1198,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "id": "oO6zONDwCutK",
     "tags": [
      "solution"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 16, 5000)\n",
+      "(1, 16, 6)\n"
+     ]
+    }
+   ],
    "source": [
     "def test24():\n",
     "    src, tgt = example(train_dataset, 42)\n",
@@ -1236,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "id": "Evi-J7BfCutM",
     "tags": []
@@ -1317,12 +1338,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "id": "NFiJLKRXCutN",
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['younger often adventures scar scar source forehead boyfriend grapes done contented weather prepare raise wastebasket religious',\n",
+       " 'younger often hidden exercises marginalized eavesdropping notes notebook hundred earn time unmarried unmarried unmarried']"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "translator = Translator(src_lookup, tgt_lookup)\n",
     "# Alternative \"mini\" version of the model for testing:\n",
@@ -1343,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "tags": []
    },
@@ -1363,9 +1396,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100.00000000000004"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bleu.sentence_score(\"the house is blue .\", [\"the house is blue .\"]).score"
    ]
@@ -1379,11 +1423,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.976353643835253"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bleu.sentence_score(\"the house was red .\", [\"the house is blue .\"]).score"
    ]
@@ -1397,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "tags": []
    },
@@ -1423,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "id": "HNtBMDVqCutP",
     "tags": []
@@ -1446,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "id": "X-yfmnSzCutQ",
     "tags": []
@@ -1470,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "id": "yr4VP-SpCutQ",
     "tags": []
@@ -1496,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
     "tags": []
    },
@@ -1525,12 +1580,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "id": "VW8wF8oRCutR",
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n",
+      " 50/322 [===>..........................] - ETA: 27s - loss: 8.4879 - jag saknar min familj . -> \n",
+      "100/322 [========>.....................] - ETA: 27s - loss: 8.4300 - jag saknar min familj . -> i i\n",
+      "150/322 [============>.................] - ETA: 19s - loss: 8.3994 - jag saknar min familj . -> i i i i\n",
+      "200/322 [=================>............] - ETA: 13s - loss: 8.3586 - jag saknar min familj . -> i i . .\n",
+      "250/322 [======================>.......] - ETA: 7s - loss: 8.3193 - jag saknar min familj . -> i i i .\n",
+      "300/322 [==========================>...] - ETA: 2s - loss: 8.2933 - jag saknar min familj . -> i i .\n",
+      "322/322 [==============================] - 48s 132ms/step - loss: 8.2845 - val_loss: 7.9744 - val_bleu: 0.0079\n",
+      "Epoch 2/2\n",
+      " 50/322 [===>..........................] - ETA: 26s - loss: 8.1676 - jag saknar min familj . -> i i i .\n",
+      "100/322 [========>.....................] - ETA: 21s - loss: 8.1649 - jag saknar min familj . -> i i .\n",
+      "150/322 [============>.................] - ETA: 16s - loss: 8.1640 - jag saknar min familj . -> i i .\n",
+      "200/322 [=================>............] - ETA: 11s - loss: 8.1650 - jag saknar min familj . -> i i .\n",
+      "250/322 [======================>.......] - ETA: 7s - loss: 8.1638 - jag saknar min familj . -> i i i .\n",
+      "300/322 [==========================>...] - ETA: 2s - loss: 8.1637 - jag saknar min familj . -> i i i .\n",
+      "322/322 [==============================] - 35s 109ms/step - loss: 8.1635 - val_loss: 7.9721 - val_bleu: 0.0072\n",
+      "CPU times: total: 11min 34s\n",
+      "Wall time: 1min 23s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "try:\n",
@@ -1541,11 +1621,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00721822739186372"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "compute_bleu(translator, valid_batched)"
    ]
