--- a/lab4/RNN_Lab.ipynb
+++ b/lab4/RNN_Lab.ipynb
@@ -5922,7 +5922,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "732A82",
+   "display_name": "dl312",
    "language": "python",
    "name": "python3"
   },
@@ -5936,7 +5936,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
